# rcy

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS.md  BACKWARD_COMPAT_REMOVAL.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Justfile  MIGRATION_PYTHON311.md  MODERNIZATION_COMPLETE.md  README.md  TEST_RESULTS.md  copyMp3_from_Downloads.sh  ep133-s2800-bridge.md  github_labels.json  github_setup.md  import_labels.sh  issue_128_update.md  issue_description.md  issue_doc.md  issue_mvc_refactoring.md  note  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-py313.txt  requirements.txt  test_bpm_with_measures.py  test_export_pipeline.py
.github/workflows/: ci.yml
claude-context/: issue-144-overview.md
claude-guidance/: README.md
claude-guidance/144/: README.md  key-concepts.md  overview.md  prompt-guide.md  testing-guide.md
config/: config.json
config/presets/: core.json  rhythm-lab.json
config/skins/: default.json  hacienda.json  high-contrast.json  monochrome.json
design/: segments.md
designs/: osc-based-architecture.md  rcy_orca_integration.md  rcy_orca_logic_getting_started.md  stereo-to-mono-conversion.md  tempo-calculation-system.md  zoom-and-scroll.md
docs/: CONFIGURATION_GUIDE.md  INDEX.md  REORGANIZATION_NOTES.md  drum_and_bass_sample_techniques.md  github_setup.md  l1_l2_workflow.md  menu_bar_integration.md  mvc-current-flow.md  pat_instructions.md  phase-2-view-state.md  phase-3-command-pattern.md  phase-4-one-way-data-flow.md  tui-guide.md
docs/design/segments/: segment-manager-design.md  segment-mutation-inventory.md  segments_and_markers.md
docs/issues/: debug_file_import_issues.md  issue_128_final_update.md
issues/: mono_file_stereo_display_fix.md
presets/: presets.json
presets/apache_L/: notes.md
presets/apache_R/: notes.md
recipes/: clip_mp3.recipe.md
research/rx2-format/: README.md  findings.md  rx2_analyzer.py  rx2_analyzer_fixed.py  rx2_marker_extractor.py  validate_test.py  validate_train.py  validate_validation.py
research/rx2-format/data/: Drums Of Death - Bonus Beat 1.rx2  Dynamic 7 - Squeezeme (part1).rx2  Erik - Child of The Sea.rx2  FBI - FBI.rx2  James Brown - Funky Drummer.rx2  README.md
research/rx2-format/datasets/: README.md  dataset_summary.json  file_index.json
research/rx2-format/docs/: CLAUDE_REFLECTIONS.md  DOMAIN_EXPERTISE_VALUE.md  FULL_TRANSCRIPT_2025_05_26.txt  METHODOLOGY.md  README.md  RX2_BOUNDARY_SYSTEM_DISCOVERY.md  RX2_BREAKTHROUGH_FINAL.md  RX2_FORMAT_DOCUMENTATION.md  RX2_FORMAT_SPECIFICATION.md  RX2_MARKER_TYPES_DISCOVERY.md  SPRINT_REFLECTION.md
sample-packs/: README.md
sample-packs/rhythm-lab/: .gitignore  README.md  download_slow.py  estimate_bars.py  generate_presets.py  manifest.json  normalize_sample_rates.py  setup.py
src/python/: audio_processor.py  audio_utils.py  bpm_analysis.md  commands.py  config_manager.py  custom_types.py  enums.py  error_handler.py  export_utils.py  high_performance_audio.py  logging_config.py  main.py  rcy_controller.py  rcy_view.py  ring_buffer_audio.py  segment_manager.py  timestretch.py  view_state.py  waveform_view.py
src/python/controllers/: __init__.py  application_controller.py  audio_controller.py  export_controller.py  view_controller.py  (+3 more)
tests/: TESTING.md  conftest.py  test_agents.py  test_all_audio_bpm.py  test_apache_preset_beats.py  test_audio_processing_pipeline.py  test_bpm_with_measures.py  test_command_suggester.py  test_commands.py  test_config_manager.py  test_ep133_integration.py  test_fixture_usage_examples.py  test_high_performance_audio.py  test_integration_flow.py  test_marker_command.py  test_marker_delete.py  test_markers.py  test_midi_time_signature.py  test_mvc_flow.py  test_playback_tempo_functionality.py  test_preset_loading.py  test_pyqtgraph_minimal.py  test_pyqtgraph_waveform.py  test_ring_buffer_audio_engine.py  test_s2800.py  test_segment_manager.py  test_segment_methods_export.py  test_tempo_region_consistency.py  test_view_state.py  test_waveform_backends.py
tests/waveform/: test_marker_editing.py  test_waveform_imports.py
tutorials/kool_is_back/: kool_is_back.mid  kool_is_back.sfz
tutorials/sordid/: jumps
validation/ab-1/: sequence.mid
validation/ab-2/: instrument.sfz  sequence.mid
validation/ab-2-160-5_segments/: ab-2-160-5_segments.mid
validation/ab-3/: instrument.sfz  sequence.mid
validation/ab-4/: instrument.sfz  sequence.mid
validation/amen-1/: amen-1.mid
validation/think-160-5/: think-160-5.mid
web/: index.html
(+85 files in other folders)
