[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcy"
version = "1.0.0"
description = "A breakbeat loop slicer and SFZ exporter inspired by jungle and drum & bass culture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RCY Contributors"}
]
keywords = ["audio", "breakbeat", "sampling", "sfz", "jungle", "drum-and-bass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "audioread>=3.0.1",
    "librosa>=0.10.2",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.1",
    "soxr>=0.5.0",
    "numpy>=2.0.2",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "midiutil>=1.2.1",
    "mido>=1.3.2",
    "pyFluidSynth>=1.3.3",
    "sf2utils>=1.0.0",
    "matplotlib>=3.9.2",
    "PyQt6>=6.7.1",
    "pyqtgraph>=0.13.3",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0",
    "typing_extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.1",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/tnn1t1s/rcy"
Repository = "https://github.com/tnn1t1s/rcy"
Issues = "https://github.com/tnn1t1s/rcy/issues"

[tool.setuptools]
packages = ["python"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RUF",   # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "S101",    # Use of assert detected (pytest uses assert)
    "T201",    # print found (allow print statements for now)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]  # Allow assert and skip annotations in tests
"test_*.py" = ["S101", "ANN"]      # Allow assert and skip annotations in tests

[tool.ruff.lint.isort]
known-first-party = ["python"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "sounddevice.*",
    "soundfile.*",
    "soxr.*",
    "pyqtgraph.*",
    "midiutil.*",
    "mido.*",
    "pyFluidSynth.*",
    "sf2utils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/python",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/python"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
